# stackarray

./: Cargo.toml  Makefile  README.md  build.rs  main.c  stackarray.c  stackarray.h
examples/: basic_usage.rs  external_usage.rs
src/: lib.rs  main.rs
