[package]
name = "rust-stack"
version = "0.1.0"
edition = "2021"
description = "Safe Rust bindings for C stack implementation"
repository = "https://github.com/WinsomeQuill/stackarray"
build = "build.rs"
authors = ["WinsomeQuill"]

[lib]
name = "rust_stack"
path = "src/lib.rs"

[[bin]]
name = "rust-stack"
path = "src/main.rs"

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.2"
bindgen = "0.72.0"

[dev-dependencies]

